# src/main/java/ru/vsu/csf/asashina/cinemaback/models/request/LoginForm.java
@@ -1,0 +1,26 @@
+package ru.vsu.csf.asashina.cinemaback.models.request;
+
+import lombok.AllArgsConstructor;
+import lombok.Getter;
+import lombok.NoArgsConstructor;
+import lombok.Setter;
+
+import javax.validation.constraints.Email;
+import javax.validation.constraints.NotBlank;
+import javax.validation.constraints.Size;
+
+@AllArgsConstructor
+@NoArgsConstructor
+@Getter
+@Setter
+public class LoginForm {
+
+    @NotBlank
+    @Size(max = 255)
+    @Email
+    private String email;
+
+    @NotBlank
+    @Size(min = 8, max = 20)
+    private String password;
+}
